# Agentic-RAG-System

./: RAG_PROJECT.ipynb  README.md  agent.py  app.py  embedder.py  main.py  pyproject.toml  query.py  scraper.py  transcribe_and_embed.py  transcribe_test.py  vedio.py
